GG - this commit has a full working version but am about to remove getAll from this one.  just checking in stable progress.
